@@ -65,7 +65,6 @@ AC_ARG_WITH(  [asm],          AS_HELP_STRING([--without-asm],          [without 
 AC_ARG_WITH(  [cmdline],      AS_HELP_STRING([--without-cmdline],      [without command line parser]))
 AC_ARG_WITH(  [elf],          AS_HELP_STRING([--without-elf],          [without ELF utils]))
 AC_ARG_WITH(  [free-list],    AS_HELP_STRING([--without-free-list],    [without free list memory allocator]))
-AC_ARG_WITH(  [io],           AS_HELP_STRING([--without-io],           [without input/output]))
 AC_ARG_WITH(  [mbr],          AS_HELP_STRING([--without-mbr],          [without Master Boot Record]))
 AC_ARG_WITH(  [memmap],       AS_HELP_STRING([--without-memmap],       [without memory map]))
 AC_ARG_WITH(  [multiboot2],   AS_HELP_STRING([--without-multiboot2],   [without Multiboot 2 information parser]))
@@ -109,7 +108,6 @@ if test -z "$with_asm";          then with_asm=no;          fi
 if test -z "$with_cmdline";      then with_cmdline=no;      fi
 if test -z "$with_elf";          then with_elf=no;          fi
 if test -z "$with_free_list";    then with_free_list=no;    fi
-if test -z "$with_io";           then with_io=no;           fi
 if test -z "$with_mbr";          then with_mbr=no;          fi
 if test -z "$with_memmap";       then with_memmap=no;       fi
 if test -z "$with_multiboot2";   then with_multiboot2=no;   fi
@@ -149,7 +147,6 @@ AS_IF([test "$with_asm"            = no ], [with_asm=no],             [with_asm=
 AS_IF([test "$with_cmdline"        = no ], [with_cmdline=no],         [with_cmdline=yes])
 AS_IF([test "$with_elf"            = no ], [with_elf=no],             [with_elf=yes])
 AS_IF([test "$with_free_list"      = no ], [with_free_list=no],       [with_free_list=yes])
-AS_IF([test "$with_io"             = no ], [with_io=no],              [with_io=yes])
 AS_IF([test "$with_mbr"            = no ], [with_mbr=no],             [with_mbr=yes])
 AS_IF([test "$with_memmap"         = no ], [with_memmap=no],          [with_memmap=yes])
 AS_IF([test "$with_multiboot2"     = no ], [with_multiboot2=no],      [with_multiboot2=yes])
@@ -208,7 +205,6 @@ AM_CONDITIONAL([WITH_ASM],            [test "$with_asm"            = yes])
 AM_CONDITIONAL([WITH_CMDLINE],        [test "$with_cmdline"        = yes])
 AM_CONDITIONAL([WITH_ELF],            [test "$with_elf"            = yes])
 AM_CONDITIONAL([WITH_FREE_LIST],      [test "$with_free_list"      = yes])
-AM_CONDITIONAL([WITH_IO],             [test "$with_io"             = yes])
 AM_CONDITIONAL([WITH_MBR],            [test "$with_mbr"            = yes])
 AM_CONDITIONAL([WITH_MEMMAP],         [test "$with_memmap"         = yes])
 AM_CONDITIONAL([WITH_MULTIBOOT2],     [test "$with_multiboot2"     = yes])
@@ -252,7 +248,6 @@ AS_IF([test "$with_asm"            = yes], [AC_DEFINE([WITH_ASM],            [1]
 AS_IF([test "$with_cmdline"        = yes], [AC_DEFINE([WITH_CMDLINE],        [1], [with command line parser])])
 AS_IF([test "$with_elf"            = yes], [AC_DEFINE([WITH_ELF],            [1], [with ELF utils])])
 AS_IF([test "$with_free_list"      = yes], [AC_DEFINE([WITH_FREE_LIST],      [1], [with free list memory allocator])])
-AS_IF([test "$with_io"             = yes], [AC_DEFINE([WITH_IO],             [1], [with input/output])])
 AS_IF([test "$with_mbr"            = yes], [AC_DEFINE([WITH_MBR],            [1], [with Master Boot Record])])
 AS_IF([test "$with_memmap"         = yes], [AC_DEFINE([WITH_MEMMAP],         [1], [with memory map])])
 AS_IF([test "$with_multiboot2"     = yes], [AC_DEFINE([WITH_MULTIBOOT2],     [1], [with Multiboot 2 information parser])])
@@ -282,7 +277,6 @@ AS_IF([test "$with_arch_x86_64"  = no], [AC_SUBST([comment_line_arch_x86_64],  [
 AS_IF([test "$with_cmdline"      = no], [AC_SUBST([comment_line_cmdline],      [//])])
 AS_IF([test "$with_elf"          = no], [AC_SUBST([comment_line_elf],          [//])])
 AS_IF([test "$with_free_list"    = no], [AC_SUBST([comment_line_free_list],    [//])])
-AS_IF([test "$with_io"           = no], [AC_SUBST([comment_line_io],           [//])])
 AS_IF([test "$with_mbr"          = no], [AC_SUBST([comment_line_mbr],          [//])])
 AS_IF([test "$with_memmap"       = no], [AC_SUBST([comment_line_memmap],       [//])])
 AS_IF([test "$with_multiboot2"   = no], [AC_SUBST([comment_line_multiboot2],   [//])])
