@@ -69,8 +69,6 @@ static size_t _etoa(out_fct_type out, char* buffer, size_t idx, size_t maxlen, d
  * Implementations: main API *
  *****************************/
 
-#ifdef WITH_IO
-
 int kernaux_fprintf(const KernAux_OldFile file, void* arg, const char* format, ...)
 {
     KERNAUX_ASSERT(file);
@@ -92,8 +90,6 @@ int kernaux_vfprintf(const KernAux_OldFile file, void* arg, const char* format, 
     const out_fct_wrap_type out_fct_wrap = { file->out, arg };
     return _vsnprintf(_out_fct, (char*)(uintptr_t)&out_fct_wrap, (size_t)-1, format, va);
 }
-
-#endif // WITH_IO
 
 int kernaux_snprintf(char* buffer, size_t count, const char* format, ...)
 {
