@@ -1,6 +1,8 @@
 2022-06-25  Alex Kotov  <kotovalexarian@gmail.com>
 
+	* configure.ac: Removed package "io"
 	* include/kernaux/generic/file.h: Added
+	* include/kernaux/io.h: Removed
 
 2022-06-24  Alex Kotov  <kotovalexarian@gmail.com>
 
